--- a/demo/.cdmrc
+++ b/demo/.cdmrc
@@ -1,23 +1,23 @@
-# .cdmrc - Fermion / codedamn config for CalculatorSpring
+# .cdmrc - Fermion / codedamn playground defaults for Spring Boot Calculator lab
 playground-view: terminal-editor-browser
 
-# Files to open by default in the editor (adjust paths if your files differ)
+# files to open by default in editor (cursor line:col optional)
 tabs:
+  - 'pom.xml#1:1'
   - 'src/main/java/com/example/demo/DemoApplication.java'
-  - 'src/main/java/com/example/demo/CalculatorController.java'
   - 'src/main/java/com/example/demo/CalculatorService.java'
-  - 'pom.xml'
-  - 'README.md'
+  - 'src/main/java/com/example/demo/CalculatorController.java'
+  - 'src/test/java/com/example/demo/TestFile.java'
 
-# Terminals: first terminal will be used by the Run button.
-# We start the Spring Boot app using mvn. Use -DskipTests to speed it up.
-# 'bash -lc' lets us use shell features and keep the process in foreground (so logs show).
+# create 3 terminals on boot (they will execute these commands once)
 terminals:
-  - "bash -lc 'mvn -DskipTests=true spring-boot:run'"
+  - 'echo "Building project (skip tests)..." && mvn -DskipTests package'
+  - 'echo "Run tests (TestFile)..." && mvn -Dtest=TestFile test'
+  - 'echo "Start Spring Boot (background)..." && mvn -q spring-boot:run & sleep 1'
 
-# Run button: will execute this in the FIRST terminal (it sends Ctrl+C first to stop previous run)
-run-button: bash -lc 'mvn -DskipTests=true spring-boot:run'
+# Run Code button: executes lab-run.sh (will run tests and export simple JSON result)
+run-button: bash ./lab-run.sh
 
-# Browser preview: show the calculator add endpoint by default.
-# NOTE: if the iframe returns 404 or is blocked by X-Frame-Options, open link in a new tab.
-browser-link: 'http://localhost:8080/api/calculator/add?a=1&b=2'
+# Browser preview link (optional) — show the app if available on port 8080
+# If Fermion exposes the container URL automatically, it will use that; this overrides it.
+browser-link: http://localhost:8080
