--- a/demo/.cdmrc
+++ b/demo/.cdmrc
@@ -1,9 +1,11 @@
-tabs:
-  - 'Calculator.java'
-  - 'Main.java'
-  - 'README.md'
-
-commands:
-  run: |
-    javac *.java
-    java Main
+# terminals
+terminals:
+    [
+        'cd client && yarn && yarn start',
+        'cd server && yarn && yarn dev',
+        'echo "We''re ready"',
+    ]
+# other config
+tabs: ['README.md']
+run-button: clear && node $$file
+browser-link: https://wikipedia.org
