--- a/demo/.cdmrc
+++ b/demo/.cdmrc
@@ -1,11 +1,36 @@
-# terminals
+# .cdmrc for Spring Boot Calculator project
+playground-view: terminal-editor-browser
+
+# Terminals: build, run (keeps shell alive), and tests (placeholder)
 terminals:
-    [
-        'cd client && yarn && yarn start',
-        'cd server && yarn && yarn dev',
-        'echo "We''re ready"',
-    ]
-# other config
-tabs: ['README.md']
-run-button: clear && node $$file
-browser-link: https://wikipedia.org
+  [
+    # 1) Build (detects pom.xml in root or demo/)
+    'if [ -f pom.xml ]; then echo "Using root pom.xml"; mvn -DskipTests=true clean package; elif [ -f demo/pom.xml ]; then echo "Using demo/pom.xml"; cd demo && mvn -DskipTests=true clean package; else echo "pom.xml not found"; fi',
+
+    # 2) Run server (keeps process in foreground so you can see logs).
+    # Runs on port 8081 to avoid port conflicts in shared playgrounds.
+    'if [ -f pom.xml ]; then mvn spring-boot:run -Dspring-boot.run.arguments="--server.port=8081"; elif [ -f demo/pom.xml ]; then cd demo && mvn spring-boot:run -Dspring-boot.run.arguments="--server.port=8081"; else echo "pom.xml not found - cannot run"; fi',
+
+    # 3) Run tests (compiles and runs junit tests). This will exit when tests finish.
+    'if [ -f pom.xml ]; then mvn -DskipTests=false test || true; elif [ -f demo/pom.xml ]; then cd demo && mvn -DskipTests=false test || true; else echo "pom.xml not found - cannot run tests"; fi'
+  ]
+
+# Files/tabs to open by default in editor
+tabs:
+  - 'demo/src/main/java/com/example/demo/CalculatorController.java'
+  - 'demo/src/main/java/com/example/demo/CalculatorService.java'
+  - 'demo/src/main/java/com/example/demo/DemoApplication.java'
+  - 'demo/src/test/java/com/example/demo/DemoApplicationTests.java'
+  - 'pom.xml'
+  - '.cdmrc'
+  - 'README.md'
+
+# Run button: runs the currently defined file command in the first terminal.
+# Here we make a "Run Code" button that runs the app using the root/demo pom detection.
+run-button: >
+  if [ -f pom.xml ]; then mvn spring-boot:run -Dspring-boot.run.arguments="--server.port=8081"; \
+  elif [ -f demo/pom.xml ]; then (cd demo && mvn spring-boot:run -Dspring-boot.run.arguments="--server.port=8081"); \
+  else echo "pom.xml not found"; fi
+
+# Browser preview link (points to where the app will run)
+browser-link: http://localhost:8081
